# myelectricaldata_import

./: .coverage  .dockerignore  .env.dist  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .tool-versions  1  3bfb136b0221_add_enable_progress_progress_status_to_.py  CHANGELOG.md  Dockerfile  Makefile  README.md  VERSION  apexchart_hourly.example.yaml  config.example.yaml  config.exemple.yaml  dependencies.py  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  report.txt  test.json  tox.ini
.devcontainer/: Dockerfile  boot.sh  devcontainer.json  docker-compose.dev.yml  docker-compose.tools.yaml  docker-compose.yaml  docker-compose.yml  post-install.sh  zshrc
.github/: FUNDING.yml  deployment.yaml
.github/ISSUE_TEMPLATE/: besoin-d-aide--.md  bug_report.md  features.md  help-wanted.md
.github/workflows/: amd64.yml  arm64.yml  armv6.yml  armv7.yml  auto-assign.yaml  auto-close.yaml  build-push.yml  build.x64.yml  build.yml  build_push_docker.yaml  build_push_docker.yml  cd.yml  close_issue.old  close_issue.yaml  deploy.yaml  deploy_prerelease.yaml  deploy_release.yaml  issue_project.old  issue_project.yaml  master.yml  pytest.yaml  semantic_prerelease.yaml  semantic_release.yaml  test.yaml
app/: VERSION  addresses.py  alembic.ini  config.py  contract.py  daily.py  daily_consumption.py  daily_has.py  daily_production.py  db_schema.py  dependencies.py  detail.py  doc.py  function.py  home_assistant.py  hourly.py  hourly_has.py  influxdb.py  init.py  init_cache.sql  main.py  main_BACKUP_30812.py  main_BASE_30812.py  main_LOCAL_30812.py  main_REMOTE_30812.py  myenedis.py  myenedis2.py  pyproject.toml  pyproject.toml.pip  requirement.txt  requirements.txt  tasks.py
app/alembic/: env.py
app/alembic/versions/: 09d887b265a5_add_enable_progress_progress_status_to_.py  09d887b265a5_add_enable_progress_progress_status_to_.py~  0b59c59dad3c_nullable_last_distribution_tariff_.py  0b5c52e4efba_add_activation_date.py  0c07baa8d7b2_base.py  158de49caa38_recreate_statistique.py  28b7a00bae70_add_tempo.py  4bb5f8f3d841_add_all_status_data.py  77be9c54cd4f_add_temporal_plan.py  955ac9d18022_add_consentement_expiration_date.py  b3505740913d_add_ecowatt.py  c70a0702d76b_add_powered_table.py  e990284249e4_add_tempo_config.py  f599b59e8a0d_add_error_log.py
app/html/: footer.html  index.html  usage_point_id.md
app/html/static/: icon.pbm  logo.css  main.css  menu.css  nice-select.css  notif.css  notif.js  swagger-ui.css
app/models/: ajax.py  cache.py  config.py  database.py  export_home_assistant.py  export_home_assistant_ws.py  export_influxdb.py  export_mqtt.py  export_mqttv1.py  html.py  influxdb.py  jobs.py  log.py  mqtt.py  myelectricaldata.py  query.py  query_address.py  query_cache.py  query_consumption_daily.py  query_consumption_detail.py  query_contract.py  query_daily.py  query_detail.py  query_ecowatt.py  query_power.py  query_production_daily.py  query_production_detail.py  query_status.py  query_tempo.py  rte.py  stat.py  test.py
app/models/old/: addresses.py  contract.py  detail.py  myenedis.py
app/old/: addresses.py  cache.py  contract.py  daily.py  detail.py  home_assistant.py  hourly.py  influxdb.py  main.py  myenedis.py  myenedis2.py
app/routers/: account.py  action.py  data.py  html.py  info.py
app/static/css/: jquery-fab-button.css  jquery-fab-button.min.css  logo.css  main.css  menu.css  notif.css
app/static/img/: Spinner-1s-337px.gif:Zone.Identifier
app/static/js/: jquery-fab-button.js  menu.js  notif.js  validator_fr.js
app/templates/: index.html  index.py  loading.py  usage_point.py  usage_point_id.py
app/templates/html/: head.html  index.html  loading.html  sidemenu.html  usage_point_id.html
app/templates/js/: datatable.js  gateway_status.js  loading.js  notif.js  sidemenu.js  usage_point_configuration.js  usage_point_select.js
app/templates/md/: index.md  usage_point_id.md
app/templates/models/: configuration.py  datatable.py  menu.py  sidemenu.py  usage_point_select.py
chart/: README.md  values.yaml
chart/Chart/: .helmignore  Chart.yaml  values.yaml
chart/Chart/templates/: NOTES.txt
data/: enedisgateway.db
dev/: docker-compose.dev.yaml  docker-compose.test.yaml
mosquitto/: mosquitto.conf
ressources/: grafana_dashboard.json
src/: __init__.py  __version__.py  alembic.ini  config.py  const.py  db_schema.py  dependencies.py  doc.py  init.py  main.py  requirements.txt  utils.py
src/alembic/: env.py
src/alembic/versions/: 09d887b265a5_add_enable_progress_progress_status_to_.py  0b59c59dad3c_nullable_last_distribution_tariff_.py  0b5c52e4efba_add_activation_date.py  0c07baa8d7b2_base.py  158de49caa38_recreate_statistique.py  28b7a00bae70_add_tempo.py  4bb5f8f3d841_add_all_status_data.py  b3505740913d_add_ecowatt.py  (+4 more)
src/config/: backend.py  gateway.py  home_assistant.py  home_assistant_ws.py  influxdb.py  log.py  main.py  mqtt.py  myelectricaldata.py  optel.py  server.py
src/database/: __init__.py  addresses.py  config.py  contracts.py  daily.py  detail.py  ecowatt.py  main.py  max_power.py  statistique.py  tempo.py  usage_points.py
src/models/: __init__.py  ajax.py  config.py  database.py  export_home_assistant.py  export_home_assistant_ws.py  export_influxdb.py  export_mqtt.py  export_mqttv1.py  influxdb.py  jobs.py  mqtt.py  query.py  query_address.py  query_cache.py  query_contract.py  query_daily.py  query_detail.py  query_ecowatt.py  query_power.py  query_status.py  query_tempo.py  rte.py  stat.py
src/routers/: account.py  action.py  data.py  html.py  info.py
src/templates/: config.example.yaml  index.py  loading.py  usage_point.py
tests/: TESTING.md  conftest.py  test_ajax_ecowatt.py  test_ajax_get_account_status.py  test_ajax_get_gateway_status.py  test_ajax_tempo.py  test_job_get_account_status.py  test_job_get_contract.py  test_job_get_ecowatt.py  test_job_get_gateway_status.py  test_job_get_tempo.py  test_jobs.py  test_query_detail.py  test_usage_point.py
tests/data/: .placeholder
toolbox/tools/: jaeger.yaml
(+33 files in other folders)
