[tool.poetry]
name = "myelectricaldata-import"
version = "0.9.4"
description = "MyElectricalData official client"
authors = ["Clément VALENTIN <m4dm4rtig4n@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.12.1"
paho-mqtt = "^1.6.1"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
Markdown = "^3.5.2"
influxdb-client = "^1.39.0"
PyYAML = "^6.0.1"
mergedeep = "^1.3.4"
Jinja2 = "^3.1.3"
art = "^6.1"
alembic = "^1.13.1"
waitress = "^2.1.2"
rauth = "^0.7.3"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
pypdf = "^3.17.4"
asyncio = "^3.4.3"
aiohttp = "^3.9.1"
websocket-client = "^1.7.0"
sqlalchemy = "^1.0.0"
fastapi-utils = "^0.2.1"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
inquirerpy = "^0.3.4"
tox = "^4.12.1"
pyflakes = "^3.2.0"
flake8-bugbear = "^24.1.17"
flake8-colors = "^0.1.9"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-typing-imports = "^1.15.0"
pep8-naming = "^0.13.3"
coverage = "^7.4.0"
pre-commit = "^3.6.0"
mock = "^5.1.0"
pylint = "^2.9.6"
tox-docker = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "data/* tmp/* .git .tox *.egg* old docs dist build"
env_files = ["../.env.debug", "../.env.sample", "../.env"]
addopts = "-rw"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]

[tool.black]
basepython = "3.12.1"
skip_install = true
deps = ["black==22.3.0"]
commands = "black --line-length 119 --check --diff --color ."

[tool.flake8]
min_python_version = "3.6.0"
ignore = [
    "D401",
    "I100",
    "I202",
    "W503",
    "E501",
    "I201",
    "B008"
]
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "tests/fixtures/*",
    "*.pyc",
    "*.egg-info",
    ".cache",
    ".eggs"
]
max-complexity = 15
application-import-names = "flake8"
