[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myelectricaldata_import"
version = "1"
dependencies = [
    "paho-mqtt",
    "python-dateutil",
    "requests",
    "markdown",
    "influxdb-client",
    "PyYAML==6.0.1",
    "mergedeep",
    "Flask",
    "Flask-APScheduler",
    "flask-swagger-ui",
    "jinja2",
    "art",
    "SQLAlchemy",
    "alembic",
    "waitress",
    "rauth",
    "psycopg2-binary",
    "PyMySQL",
    "fastapi",
    "uvicorn",
    "fastapi-utils",
    "python-multipart",
    "influxdb-client",
    "pypdf",
    "asyncio",
#    "asyncws",
    "aiohttp",
    "websocket-client",
]

[project.optional-dependencies]
dev = ["pytest"]